last iteration hopefully

--- a/text/content.tex
+++ b/text/content.tex
@@ -5,21 +5,22 @@
 In diesem Kapitel wollen wir den aktuellen Stand der Wissenschaft vorstellen. Hierbei beziehen wir uns auf das Thema Lernen. Welches Wissen gibt es hierbei bereits und auf welchem Stand sind diese? Das wollen wir in diesem Kapitel klären, bevor die Grundlagen der Arbeit erläutert werden.
 
 \section{Lernen}
-Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns mit dem aktuellen Stand des Lernens befassen, so dass bei unseren Lösungsansätzen das Lernen besser begründet werden kann.
+Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns bevor wir unsere Problemstellung einsteigen mit dem aktuellen Stand des Lernens befassen und den aktuellen Stand der Forschung zum Thema Lernen aufzeigen mit unseren in der Arbeit verwendeten Konzepten. Allgemein versteht man unter Lernen den individuellen oder kollektiven Erwerb von körperlichen und sozialen Kenntnissen und Fertigkeiten durch Absicht (intentionales Lernen) oder beiläufig (inzidentelles und implizites Lernen) \cite{lernen}.
+
 
 
 \subsection{Problembasiertes Lernen}
 "Problem based Lerning (PBL) is a learner-centred approach for designing learning environments in authentic, ill-structured problems" entnommen aus \cite{problembasiertes}. \par
 
-Das Problembasierte Lernen, wie im Zitat deutlich wird, bezieht sich auf das Erarbeiten von selbstständigen Lösungsansätzen zum Lösen eines Problems. Der Lernende soll ein Thema selbstständig erarbeiten, ohne das jemand anderes einen Lösungsweg vorzeichnet. Auf dem Weg zu der Lösung eines Problems muss er evtl. mehrere Ansätze probieren um sein Ziel zu erreichen. Wie im Zitat bereits erwähnt steht der Lernende im Mittelpunkt. Der Lernende muss hierbei selbst die Initiative ergreifen. Ein Lehrer steht beim Lernprozess nur als Helfende Hand zur Seite. Er dient dabei lediglich als Coach, der evtl. aufkommende Fragen des Lernenden beantwortet und ihn in eine spezielle Richtung leitet, falls der Lernende nicht mehr weiterkommt. Beim Thema Software haben wir eine ähnliche Problemstellung. Ein möglicher Anwender kommt an einem Punkt in der Software nicht mehr weiter und muss selbstständig eine Lösung für das konkrete Problem finden. 
+Das Problembasierte Lernen, wie im Zitat deutlich wird, bezieht sich auf das Erarbeiten von selbstständigen Lösungsansätzen zum Lösen eines Problems. Der Lernende soll ein Thema selbstständig erarbeiten ohne dass jemand Anderes einen Lösungsweg vorzeichnet. Auf dem Weg zu der Lösung eines Problems müssen evtl. mehrere Ansätze ausprobiert werden, damit das Ziel der Problemlösung erreicht wird. Wie im Zitat bereits erwähnt steht der Lernende im Mittelpunkt. Dieser muss hierbei selbst die Initiative ergreifen. Ein Lehrer steht beim Lernprozess nur als Helfende Hand zur Seite. Er dient dabei lediglich als Coach, der evtl. aufkommende Fragen des Lernenden beantwortet und den Lernenden unterstützt wenn er nicht mehr weiterkommt. Beim Thema Software haben wir eine ähnliche Problemstellung. Ein möglicher Anwender kommt an einem Punkt in der Software nicht mehr weiter und muss selbstständig eine Lösung für das konkrete Problem finden. 
  
 \subsection{Differenzielles Lernen}
 Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problemorientierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen. Von einem Lehrer wird ein konkretes Problem vorgegeben. Dieses Problem soll im Anschluss auf verschiedene Wege gelöst werden. Durch die Differenzierung entsteht ein grobes Bild im Kopf, wie ein Lösungsansatz aussehen soll. Im Techniktraining im Sport zum Beispiel wie eine konkrete Technik im Sport aussehen soll. Wenn es in Zukunft zu einem solchen Problem kommt, so kann der Lernende aus verschiedenen Lösungsmöglichkeiten die passende auswählen. Diese Möglichkeit gibt es bei der Bedienung von Software auch. Hier ist es ebenfalls möglich eine konkrete Problemstellung, wie beispielsweise das Anlegen eines Adressdatensatzes auf verschiedene Wege zu lösen. Aus diesem Grund ist der differenzielle Lernansatz in unserer Arbeit interessant.
 
 
 \section{Game-Based Learning}
-Ein aktueller Ansatz um schnell neue Inhalte zu Lernen ist das sogenannte "Game-Based Learning". Dieser Ansatz geht von einem spielerischen Lernen aus. Neue Lerninhalte werden in einem digitalen Spiel aufbereitet. Digitale Spiele sind nach Wagner /cite{} ein regelbasiertes,
-interaktives Medium, das Spielende „emotional bindet und innerhalb eines von der objektiven Realität abgegrenzten Raums stattfindet“ und dessen „zugrunde liegende Interaktionstechnologie rein digitaler Natur ist“. Dieser Ansatz verspricht Spaß beim Lernen von neuen Inhalten. Dieser Spaß fördert das kreative Denken und hilft neue Lerninhalte einfacher zu verstehen und vor allem besser behalten und verinnerlichen zu können. 
+Ein aktueller Ansatz um schnell neue Inhalte zu Lernen ist das sogenannte "Game-Based Learning". Dieser Ansatz geht von einem spielerischen Lernen aus. Neue Lerninhalte werden in einem digitalen Spiel aufbereitet. Digitale Spiele sind ein regelbasiertes,
+interaktives Medium, das Spielende „emotional bindet und innerhalb eines von der objektiven Realität abgegrenzten Raums stattfindet“ und dessen „zugrunde liegende Interaktionstechnologie rein digitaler Natur ist“. \cite{gameBased} Dieser Ansatz verspricht Spaß beim Lernen von neuen Inhalten. Dieser Spaß fördert das kreative Denken und hilft neue Lerninhalte einfacher zu verstehen und vor allem besser behalten und verinnerlichen zu können. 
 
 
 \chapter{Grundlagen}
@@ -131,6 +132,7 @@ Abbildung \ref{img1:criteria} zeigt unsere Bewertungskriterien, die im Folgenden
 \subsection{Begründung der Kriterien}
 Die Kriterien lassen sich grob in 2 Kategorien einteilen: wirtschaftliche und technische Kriterien. Zu den wirtschaftlichen Kriterien zählen die Kosten, die noch einmal in Anfangskosten und Wartungskosten unterteilt werden, und die Realisierbarkeit der einzelnen Lösungsansätze. Zu den technischen Kriterien haben wir die Wartbarkeit, den Datenschutz und die Usability gezählt.
 \subsection{Wirtschaftlich}
+Die wirtschaftlichen Aspekte eines Projektes sind häufig ausschlaggebend für die Entscheidung über die Durchführung eines Projektes. Daher können diese auch bei unserer Arbeit nicht fehlen.
 \subsubsection{Anfangskosten}
 Unter den Anfangskosten verstehen wir die alle Kosten die anfallen, bis der Lösungsansatz in CAS Campus verfügbar und einsetzbar gemacht werden kann. Diese setzen sich aus Sachkosten und Personalkosten zusammen. Zu den Sachkosten zählen zum Beispiel die benötigte Hardware, Lizenzen für bestimmte Software, usw. Da bei der Softwareentwicklung aber der kosten treibende Faktor die Personalkosten sind, werden die Sachkosten im Folgenden nicht näher betrachtet. Hinzuzufügen ist, dass die Personalkosten sich am Aufwand des Projekts orientieren. Man spricht also von einem Personalaufwand für ein bestimmtes Projekt. Um diesen Personalaufwand zu abzuschätzen gibt es bereits verschiedene etablierte Methoden, die jedoch von verschiedenen Faktoren wie dem Vorgehensmodell (z.B. Wasserfallmodell vs. SCRUM) \cite{vorgehensmodelle} oder der Art der Schätzung (Einfache Schätztechniken wie zu erwartende Lines of Code (LOC) anhand von bekannten LOCs berechnen vs. Algorithmische Aufwandsschätzungen wie COCOMO) \cite{aufwand}. Generell kann man dazu aber sagen, dass eine Schätzung ungenauer wird, sofern sich der abzuschätzende Zeitraum vergrößert. Die lässt sich mit dem, in der Softwaretechnik anerkannten, sogenannten  Kegel der Unsicherheit (engl.  Cone of Uncertainty, siehe Abbildung \ref{img2:costs}) einfach darstellen. Dabei bildet die x-Achse die Phase eines Projekts und die y-Achse den relativen Aufwand eines Projekts ab.
 \begin{figure}[ht]
@@ -141,33 +143,40 @@ Unter den Anfangskosten verstehen wir die alle Kosten die anfallen, bis der Lös
 \end{center}
 \end{figure} 
 \subsubsection{Wartungskosten}
-\subsubsection{Nutzen}
+Die Wartungskosten sind die Kosten, die während des Betriebs der Anwendung entstehen, wie zum Beispiel das Einfügen neuer Inhalte oder das Beheben von Fehlern. Durch ein gutes Projektmanagement und eine geschulte Qualitätssicherung lassen sich diese Kosten stark reduzieren.
+\subsubsection{Realisierbarkeit}
+Unter Realisierbarkeit verstehen wir die Möglichkeit mit firmeninternen Mitteln die nachfolgend vorgestellten Lösungsansätze umsetzen zu können. Dies lässt sich einfach an einem Gegenbeispiel demonstrieren. Es ist derzeit nicht möglich eine adaptive Hilfe für den Nutzer zu realisieren, die über eine künstliche Intelligent verfügt und selbstständig das Nutzungsverhalten des Benutzer überwacht, analysiert und im  darauf basierend entsprechende Hilfestellungen zu bieten, falls es merkt, dass der Nutzer an einer Stelle hängt.
 
 \subsection{Technisch}
 Da Software ein sehr technisches Gut ist, müssen technische Bewertungskriterien zur Bewertung der Lösungsansätze verwendet werden. Im Folgenden sollen unsere Kriterien für die Arbeit aufgezeigt werden.
 
 \subsubsection{Wartbarkeit}
-Die Wartbarkeit einer Software kann mithilfe der sogenannten internen Softwarequalität beschreiben \cite{softQuali}. Die interne Software-Qualität bewertet die Software anhand von der gesamten Wartbarkeit des Systems. Hier geht es insbesondere darum, wie schnell es geht den vorhandenen Code umzustrukturieren und wie das Design anpassbar ist, so dass es auf zukünftige Anforderungen der Software reagieren kann. In unserem Umfeld ist es wichtig, dass die Lösung dem Zielsystem Software passend gemacht wird. Im Zuge der Wartbarkeit ist es wichtig, das für neue Hilfethemen, die aufgrund von neuen Anforderungen hinzukommen das vorhandene Hilfesystem schnell angepasst werden kann, so dass die Kosten im Rahmen gehalten werden kann.
+Die Wartbarkeit einer Software kann mithilfe der sogenannten internen Softwarequalität beschreiben \cite{softwareQuality}. Die interne Software-Qualität bewertet die Software anhand von der gesamten Wartbarkeit des Systems. Hier geht es insbesondere darum, wie schnell es geht den vorhandenen Code umzustrukturieren und wie das Design anpassbar ist, so dass es auf zukünftige Anforderungen der Software reagieren kann. In unserem Umfeld ist es wichtig, dass die Lösung dem Zielsystem Software passend gemacht wird. Im Zuge der Wartbarkeit ist es wichtig, das für neue Hilfethemen, die aufgrund von neuen Anforderungen hinzukommen das vorhandene Hilfesystem schnell angepasst werden kann, so dass die Kosten im Rahmen gehalten werden kann.
 \subsubsection{Datenschutz}
 Aufgrund der aktuellen politischen Lage mit der NSA-Affäre müssen heutige Softwaresysteme sehr sorgfältig mit dem Thema Datenschutz umgehen. Jedes System, was Informationen vom Nutzer sammelt, wird hier kritisch bewertet, da die Daten ein wichtiges Gut sind. In unserer Arbeit ist die Informationsbereitstellung des Nutzers sehr wichtig, da anhand der bereitgestellten Informationen die Hilfeinhalte aufbereitet werden um eine Adaption zu gewährleisten. Die entwickelten Lösungsansätze müssen einer kritischen Prüfung zum Thema Datenschutz standhalten.
 \subsubsection{Usability}
 Das Thema Usability ist ein wichtiges Qualitätsmerkmal von Software \cite{usability}. Ohne eine vernünftige Usability ist die Akzeptanz der Software sehr gering und der Nutzer möchte die Software nur ungern verwenden. Weiterhin möchte der Nutzer bei der Benutzung schnell zu seinem Ziel kommen und die Aufgabe möglichst effizient bearbeiten. Heutige Software kann komplexe Prozesse einfach abbilden. Dies ist das Hauptziel der Usability. Schwierige Sachverhalte einfach aufzubereiten, so dass sie jeder verstehen kann. In unserer Arbeit müssen aus diesem Grund die Lösungsansätze mit der Usability bewertet werden.
 
 \section{Klassische Hilfe}
-Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer weiterhelfen. Durch eine schnelle Lösungsfindung und Aufbereitung soll dem Nutzer möglichst schnell und effektiv geholfen werden. 
 
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width = 0.95\textwidth]{onlineHilfe.png}
-\caption{Klassischer Aufbau eines Hilfesystems}
+\caption{Klassische Hilfe; CAS Campus}
 \label{img1:helpSystem}
 \end{center}
 \end{figure} 
 \subsection{Erläuterung}
-Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img1:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten. Dieser Ansatz funktioniert am Besten, wenn der Nutzer sein konkretes Problem kennt und auch entsprechend beschreiben kann. Dies ist bei Software sehr oft gegeben, was bedeutet ein Nutzer hängt gerade in einer Anwendung und weiß wonach er genau suchen muss.
+Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015).Es handelt sich im Falle der Abbildung \ref{img1:helpSystem} um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. \textit{„Unter 'Indexieren' versteht man eine Methode der Informationserschließung, die den Inhalt von Dokumenten oder anderen Objekten durch Stich- und Schlagwörter beschreibt.“} \cite{indexierung} Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet somit die Möglichkeit zu einem konkreten Problem eine Lösung zu finden. \par
+
+Dazu ist anzumerken, dass sich bei dieser Form der Hilfe selbstverständlich sowohl Vorteile als auch Nacheile ergeben. Diese werden nachfolgend beschrieben. Zu den Vorteilen der klassischen Hilfe zählen die einfache und günstige Bereitstellung sowie Aktualisierung der Inhalte. Weiterhin ist ein Auffinden von Information anhand des Index oder der Suchfunktion schnell möglich und die Inhalte können in nahezu beliebigem Umfang und Form dargestellt werden. Somit können die Inhalte von einer einfachen Beschreibung eines Prozesses, bis hin zu einem komplexen Sachverhalt ausführlich und anschaulich dargestellt werden. Weiterhin kann der Inhalt der Hilfe unabhängig von dem Programm entwickelt bzw. gepflegt werden. 
+Jedoch sind die Nachteile der klassischen Hilfe nicht außer Acht zu lassen. Sie reichen von offensichtlichen Aspekten wie der Notwendigkeit zwischen der eigentlichen Anwendung und dem Hilfe-Fenster hin und her zu wechseln, bis hin zu nicht so offensichtlichen Problemen wie der Einarbeitungszeit, die ein unerfahrener Nutzer benötigt, um mit der Hilfe zurecht zu kommen. Damit ist zum Beispiel die Zeit gemeint, die der Benutzer benötigt, um die Art der Indexierung zu verstehen, da verschiedene Hilfesysteme verschiedene indexiert sind.
+
+Generell gibt es zur Indexierung eine Norm, DIN 31623 mit dem Titel  \textit{„Indexierung zur inhaltlichen Erschließung von Dokumenten“} \cite{dinNorm}. Es wird dabei zwischen drei Verfahren unterschieden: intellektuelle Indexierung, automatische Indexierung und Computergestützte Indexierung. \textit{„Werden Deskriptoren von Indexierern vergeben, spricht man von intellektueller Indexierung. Wenn Computer diese Arbeit erledigen, ist das automatische (oder maschinelle) Indexierung. Sind Mensch und Computer daran beteiligt, handelt es sich um computergestützte Indexierung. […] „} \cite{designingUi} Deskriptoren sind \textit{„Kenn- oder Schlüsselwort[e], durch (…) [die, J.S] der Inhalt einer Information charakterisiert wird und (…) [die, J.S] zur Bestimmung von Daten im Speicher eines Computers dien[en, J.S](…)“} \cite{deskriptor}.
+
 
 \section{Lernspiel-App}
-Der zweite Lösungsansatz soll eine Lösung in Form einer sogenannten Lernspiel-App aufzeigen. Zuerst wird eine Begriffsdefinition von App durchgeführt bevor die konkrete Lösung vorgestellt wird.
+Der zweite Lösungsansatz ist eine Lösung in Form einer sogenannten Lernspiel-App. Zuerst wird eine Begriffsdefinition von App durchgeführt bevor die konkrete Lösung vorgestellt wird.
 
 \subsection{App}
 Der App-Begriff bezieht sich in unserer Arbeit auf einen kleinen Prozess, der mit einer Software durchgeführt werden kann. Dieses Prinzip kann man am Besten anhand von Unix-Systemen erklären. Hier gibt es für jedes kleine Teilproblem, welches bei der Verwendung eines Computers eintritt ein extra Programm. Dieses Programm macht genau die Aufgabe, die es soll und keine zusätzlichen Extra-Funktionen. Ein gutes Beispiel ist ein Texteditor. Bei einer grafischen Oberfläche beherrscht dieser beispielsweise die Funktion suchen und ersetzen. Weiterhin kann der Editor beispielsweise bestimmte Textfelder rot markieren und eine Datei von dem geschriebenen anlegen. In einer Unix-Konsole gäbe es für alle diese Funktionen einen extra Befehl, der genau diese eine Funktion erfüllt. Dies hat den Vorteil, dass sehr effizient gearbeitet werden kann. Dieses Prinzip verwenden die modernen Apps auf dem Smartphone ebenfalls. Für jeden Anwendungsfall gibt es genau eine App. Das Smartphone besitzt somit eine Ansammlung mehrerer Apps zur Lösung von mehreren Teilproblemen. Eine solche Plattform ist in Abbildung \ref{img1:smartDesign} abgebildet. Auf der linken Seite befinden sich die Icons von mehreren Apps. Auf der rechten Seite ist der konkrete Prozessworkflow, in diesem Beispiel eine Kontaktliste sichtbar. 
@@ -194,10 +203,38 @@ Unser sogenanntes Expertensystem beruht auf einem Recommendersystem. Es soll, wi
 \chapter{Empfehlung}
 Unsere abschließende Empfehlung soll die Lösungsansätze anhand der Nutzerklassen und unserer Kriterien bewerten. Hierzu erfolgt jeweils eine Gegenüberstellung.
 \section{Bewertung der Lösungsansätze anhand der aufgestellten Nutzerklassen}
+
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{userLoesungen.png}
+\caption{Gegenüberstellung von Nutzerklassen und Lösungsansätzen}
+\label{img1:table1}
+\end{center}
+\end{figure} 
+Wie sich aus Tabelle \ref{img:table1} entnehmen lässt, empfehlen wir die Benutzung der klassischen Hilfe für die Powernutzer. Dies hängt mit dem, bereits in der Erklärung der klassischen Hilfe genannten, Punkt zusammen, dass diese für ungeübte Nutzer, wie es Gelegenheitsnutzer und spezielle Nutzer sind, aufgrund der Indexierung zum Teil schwierig zu benutzen ist. Dies soll nicht bedeuten, dass sie für diese Nutzerklasse ausgeschlossen wird, sondern nur, dass die Powernutzer die fokussierte Klasse darstellt. Anders sieht es dagegen bei der Lern-App aus. Diese ist ganz klar für die speziellen Nutzer, also hauptsächlich die Studenten, gedacht. Dies liegt am spielerischen Ansatz, der für den täglichen Gebrauch nicht notwendige Ernsthaftigkeit und Geschwindigkeit zur Lösungsfindung bereitstellt. Er bietet jedoch den speziellen Nutzern, gerade wegen des spielerischen Ansatzes, eine Möglichkeit sich neben bereits zu Lernendem, eine angenehme, evtl. aufmunternde Hilfestellung bei der Benutzung von CAS Campus an. Abschließend kann man zum letzten Lösungsansatz, dem Expertensystem, noch sagen, dass es aufgrund der schnellen und kompetenten Hilfestellung, die es bietet ein sehr gutes System für die Poweruser und die anspruchsvollen Gelegenheitsnutzer bietet.
+
 \section{Bewertung der Lösungsansätze anhand der aufgestellten Kriterien}
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{kriterienLoesung.png}
+\caption{Gegenüberstellung der Kriterien und den Lösungsansätzen}
+\label{img1:table2}
+\end{center}
+\end{figure} 
+In Tabelle \ref{img1:table2} ist eine Gegenüberstellung der Kriterien und unseren Lösungsansätzen zu sehen. Die Bewertung der einzelnen Punkte fand aufgrund der in den einzelnen Kriterien z.B. benannten Methoden und eigenen Recherchen, Erfahrungswerten und bestem Wissen und Gewissen statt. Die Bewertung erhebt daher keinen Anspruch auf absolute Korrektheit. Beginnend am Beispiel der Kosten, kann man dazu sagen, dass diese anhand der geschätzten Kosten im Vergleich zu Gesamtausgaben der CAS bewertet wurden. Diese wurden aus dem Unternehmensprofil und dem Jahresabschlussbericht des Jahres 2013 entnommen. Die Kosten für die Lern-App und das Expertensystem wurden als mittel eingestuft, da es sich um eine Neuentwicklung handelt und daher sowohl der Entwicklungsaufwand, als auch der Designaufwand voll zu tragen kommt. Anschließend muss die Integration in das Zielsystem durchgeführt werden, was ebenfalls in der aktuellen Form von CAS Campus einen Aufwand darstellt. Die Anfangskosten für die klassische Hilfe sind praktisch nicht vorhanden, da diese Form der Hilfe bereits im System existiert. \par
+Die Wartungskosten sind bei allen drei Lösungsansätzen als gering einzustufen, da bei der klassischen Hilfe neue Inhalte ohne Änderungen am Gesamtsystem erstellt und eingefügt werden können; bei der Lern-App ist dies je nach Art der Implementierung ebenfalls möglich und beim Expertensystem müssen nur personelle Veränderungen beachtet werden, die die „Neuausbildung“ von Experten aufgrund von abgehenden Experten notwendig macht. \par
+
+Die Realisierbarkeit ist bei der Klassischen Hilfe irrelevant, da sie ja bereits vorhanden ist. Die Lern-App lässt sich leicht realisieren, da durch den Aufbau als App, die Umsetzung leicht fällt. Dagegen stellt das Expertensystem schon eher eine Herausforderung dar, da bei der Entwicklung besonderen Wert auf die spätere Selbständigkeit dieser Form eines Hilfesystems Wert gelegt werden muss. Damit ist gemeint, dass ein Expertensystem nach einer gewissen Initialisierungsphase selbstständig Experten herausbilden und benennen soll, sodass in jedem Bereich mindestens ein benötigter Ansprechpartner vorhanden ist.
+ \par
+In den technischen Bewertungskriterien bilden sich schon eher Unterschiede zwischen den Lösungsansätzen ab. Die Wartbarkeit unterscheidet sich nur im Bereich des Expertensystems, da diese von Anfang an komplexer ist und somit bei einer Wartung ein breiteres Wissensspektrum erfordert als zum Beispiel die Lern-App. Klassische Hilfe und Lern-App sind leicht zu warten, da wie bereits erwähnt, Inhalt und Aufbereitung durch das System getrennt sind.
+\par
+Der Datenschutz ist für die ersten beiden Lösungsansätze vernachlässigbar, da keine privaten Daten erforderlich sind. Anders sieht es dagegen beim Expertensystem aus. Hierbei müssen die Kontaktdaten des Experten für die Nutzer der Software sichtbar sein und müssen somit vom Experten vorher angegeben werden. Durch eine Zustimmung eines Experten zur Herausgabe seiner Daten für Benutzung der Software, lässt sich dieses Problem aber einfach umgehen. Es muss dabei nur darauf geachtet werden, dass die benötigten Daten nur für die Benutzer der Anwendung ersichtlich sind und nicht für Externe.
+\par
+Kommen wir abschließend in diesem Kapitel zur Bewertung der Usability. Die klassische Hilfe lässt sich eher von erfahrenen Nutzern effektiv benutzen, daher haben wir diese als mittel-schwer eingestuft. Die App dagegen soll vom Grundgedanken her schon einfach zu benutzen sein und ist daher als leicht einzustufen. Das Expertensystem erfordert von den Benutzern dieses, selbst keine besonderen Kenntnisse und bietet aus Sicht der Usability eine schnelle und einfach Hilfe durch einen Anruf. 
+
 
 \section{Konkrete Empfehlung}
-Unsere Empfehlung sieht eine Kombination der beiden Lösungsansätze Lernspiel-App und Expertensystem vor. Mithilfe dieser Kombination sehen wir die Ziele der einzelnen Nutzergruppen am besten zufriedengestellt. Eine klassische Online-Lernhilfe besteht im Software-Zielsystem bereits. Aus diesem Grund bietet der Lösungsansatz nicht neues. Die Lernspiel-App hingegen eignet sich hervorragend um komplexe Sachverhalte in der Software auf eine spielerische Art zu erlernen. Wer sich hierbei als besonders gut hervortut, der kann im Anschluss dann als Experte für ein Expertensystem genommen werden. Das Expertensystem bietet den Hauptvorteil, dass dem Nutzer bei einem konkreten Problem schnell geholfen werden kann. Beim Einsatz des Expertensystem ist wie gesagt die Zeitkomponente wichtig, da ein Nutzer der Software nicht ständig mit Anfragen von anderen Nutzern gestört werden möchte, muss diese Lösung auch von der Universität bei der die Lösung zum Einsatz kommt getragen werden, damit der Ansatz funktioniert. Somit die konkrete Empfehlung wäre eine oder mehrere Lernspiel-Apps, die komplexe Inhalte der Software für den Nutzer einfach aufbereiteten, so dass er schnell viel neues erlernen kann. Wer besonders kreative Lösungen für die Problemstellung in der App findet, der eignet sich als späterer Experte, der bei konkreten Problemen in der Verwendung der Software unterstützen kann.
+Unsere Empfehlung sieht eine Kombination der beiden Lösungsansätze Lernspiel-App und Expertensystem vor. Mithilfe dieser Kombination sehen wir die Ziele der einzelnen Nutzergruppen am besten zufriedengestellt. Eine klassische Online-Lernhilfe besteht im Software-Zielsystem bereits. Aus diesem Grund bietet der Lösungsansatz nichts neues, muss aber auch nicht neu entwickelt werden. Die Lernspiel-App hingegen eignet sich hervorragend um komplexe Sachverhalte in der Software auf eine spielerische Art zu erlernen. Wer sich hierbei als besonders gut hervortut, der kann im Anschluss dann als Experte für ein Expertensystem genommen werden. Das Expertensystem bietet den Hauptvorteil, dass dem Nutzer bei einem konkreten Problem schnell geholfen werden kann. Beim Einsatz des Expertensystem ist wie gesagt die Zeitkomponente wichtig, da ein Nutzer der Software nicht ständig mit Anfragen von anderen Nutzern gestört werden möchte, muss diese Lösung auch von der Universität, bei der die Lösung zum Einsatz kommt getragen werden, damit der Ansatz funktioniert. Somit die konkrete Empfehlung wäre eine oder mehrere Lernspiel-Apps, die komplexe Inhalte der Software für den Nutzer einfach aufbereiteten, so dass er schnell viel Neues erlernen kann. Wer besonders kreative Lösungen für die Problemstellung in der App findet, der eignet sich als späterer Experte, der bei konkreten Problemen in der Verwendung der Software unterstützen kann.
 
 \chapter{Zusammenfassung}
 Die Aufgabe dieser Seminararbeit war es, ein adaptives Online-Hilfesystem zu entwickelt. Gestartet haben wir mit der Frage nach der Adaption. Hier haben wir uns, durch die Vorgabe unserer Betreuer, auf die Adaption an den Nutzer konzentriert. Nachdem wir alle Nutzerrollen aufgezeigt haben, konnten wir eine Klassifizierung der Nutzer durchführen. Diese Klassifizierung hat uns geholfen auf den Nutzer passende Lösungsansätze zu entwickeln. Diese sind durch verschiedene Grundlagen des problembasierten und differenziellen Lernens entstanden. Weiterhin konnten wichtige Ansätze der Gamification in einer App-Lösung erarbeitet werden. Eine weitere Lösung ist durch eine Recommendersystem-Grundlage entstanden. Damit ein besserer Vergleich stattfinden konnte, wurde die bisherige Lösung eines klassischen Hilfesystems vorgestellt. In der folgenden Gegenüberstellung der Lösungsansätze wurden die Lösungen zuerst mit den Nutzerklassen und anschließend nach unseren selbst auferlegten Kriterien bewertet. Die daraus folgende Bewertung hat gezeigt, dass eine Kombination von allen drei Lösungsansätzen sinnvoll ist und durchgeführt werden kann. Eine klassische Lernhilfe besteht bereits und wird durch die beiden zusätzlichen Lösungsalternativen Lernspiel-App und Expertensystem ergänzt.
