--- a/thesis.bib
+++ b/thesis.bib
@@ -10,7 +10,7 @@
 @book{vorgehensmodelle,
   title={Vorgehensmodelle kompakt},
   author={Bunse, C., von Knethen, A.},
-  url={https://books.google.de/books?id=X47DrRaHJNkC},
+  volume={2. Hrsg.}
   publisher={Spektrum Akademischer Verlag}
 }
 
@@ -46,6 +46,14 @@ OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme}
   url={http://wirtschaftslexikon.gabler.de/Archiv/688938796/gamification-v4.html}
 }
 
+@Article{gameBased,
+  author =       {Son Le, Peter Weber, Martin Ebner},
+  title =        {Game-Based Learning - Spielend Lernen},
+  year = 	{2013},
+   pages ={267},
+  journal={Lehrbuch fuer Lernen und Lehren mit Technologien}
+}
+
 @Article{lernen,
   author =       {Maier, G. W., Bartscher},
   title =        {Lernen},
@@ -68,6 +76,14 @@ OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme}
   year = 	{2015},
   pages ={Abruf am 20.07.2015},
   url={http://blog.crisp.se/wp-content/uploads/2011/12/Cone-of-uncertaintyNEW.jpg}
+}
+
+@Article{softwareQuality,
+  author =       {Mike Long},
+  title =        {Internal vs. External Software Quality},
+  year = 	{2010},
+  pages ={Abruf am 20.07.2015},
+  url={https://meekrosoft.wordpress.com/2010/10/31/internal-and-external-software-quality/}
 }
 
 @Article{adaptieren,
@@ -116,6 +132,14 @@ OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme}
   year = {2015},
   pages ={Abruf am 20.07.2015},
   url={http://wiki.infowiss.net/Indexierung}
+}
+
+@Article{dinNorm,
+  author =       {DIN Deutsches Institut für Normung e. V.},
+  title =        {Indexierung zur inhaltlichen Erschließung von Dokumenten.},
+  year = {1988},
+  pages ={DIN 31623},
+  publisher={Beuth Verlag}
 }
 
 @Article{verstaendlichkeit,
